--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1CY829Fej+OOqGa7KQ0NBiBFnGN92axpGz+BhSuPIW4=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+# If you use Docker, please change it to any port you want.
+APP_PORT=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -10,7 +13,6 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
@@ -21,13 +23,16 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
 
-SESSION_DRIVER=database
+# If you use Docker, please change it to database. Otherwise, it will be 127.0.0.1
+DB_HOST=
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=""
+DB_ROOT_PASSWORD=""
+
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -37,14 +42,17 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+
+# If you use Docker, please change it to redis. Otherwise, it will be 127.0.0.1
+REDIS_HOST=
+
+REDIS_PASSWORD=""
 REDIS_PORT=6379
 
 MAIL_MAILER=log
