--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,9 +61,47 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      ollama:
+        condition: service_healthy
+      qdrant:
+        condition: service_healthy
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    volumes:
+      - ollama_data:/root/.ollama
+    restart: unless-stopped
+    entrypoint: [ "sh", "-c" ]
+    command: >
+      "ollama serve & sleep 3 && ollama pull qwen3:0.6b && ollama pull nomic-embed-text && wait"
+    networks:
+      - livewire-network
+    healthcheck:
+      test: [ "CMD", "sh", "-c", "ollama ls | grep -q 'qwen3:0.6b' && ollama ls | grep -q 'nomic-embed-text'" ]
+      interval: 1m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
+  qdrant:
+    image: qdrant/qdrant
+    container_name: ${APP_NAME}-qdrant
+    restart: unless-stopped
+    volumes:
+      - qdrant_data:/qdrant/storage
+    networks:
+      - livewire-network
+    healthcheck:
+      test:
+        - CMD-SHELL
+        - bash -c ':> /dev/tcp/127.0.0.1/6333' || exit 1
+      interval: 5s
+      timeout: 5s
+      retries: 3
 volumes:
   database-volume:
   redis-volume:
+  ollama_data:
+  qdrant_data:
 networks:
   livewire-network:
     driver: bridge
