--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^5.2.3",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "marked": "^15.0.11",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vue": "^3.5.13"
+    },
+    "dependencies": {
+        "@tailwindcss/postcss": "^4.1.5",
+        "postcss": "^8.5.3"
     }
 }
