--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "vue": "^3.5.13"
     },
     "dependencies": {
+        "@inertiajs/vue3": "^2.0.8",
         "@tailwindcss/postcss": "^4.1.5",
-        "postcss": "^8.5.3"
+        "postcss": "^8.5.3",
+        "vue-router": "^4.5.1"
     }
 }
