--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/vue3": "^2.0.8",
         "@tailwindcss/postcss": "^4.1.5",
         "postcss": "^8.5.3",
+        "vanilla-toaster": "^0.0.4",
         "vue-router": "^4.5.1"
     }
 }
